--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,29 +4,17 @@
     <div class="row mt-5" >
         <div class="col-md-4 col-sm-2"></div>
         <div class="col-md-4 col-sm-6">
-            <form  #formRef="ngForm" class="row" (ngSubmit)="onSubmit(formRef)">
-                <div class="form-check col-6 mt-2">
-                    <input class="form-check-input" type="radio" name="usertype" id="inlineRadio1" value="user" ngModel>
-                    <label class="form-check-label" for="inlineRadio1" ><b>User</b></label>
-                  </div>
-                  <div class="form-check col-6 mt-2">
-                    <input class="form-check-input" type="radio" name="usertype" id="inlineRadio2" value="admin" ngModel>
-                    <label class="form-check-label" for="inlineRadio2" ><b>Admin</b></label>
-                  </div>
+            <form  [formGroup]="loginForm" class="row" (ngSubmit)="onSubmit()">
+               
               
                 <div class="form-group">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" ngModel required #username="ngModel">
-                    <span  style="color: red;" *ngIf="(username.touched || formRef.submitted) && username.errors?.required">
-                        <b> Username is required</b>
-                     </span>
+                    <label class="form-label">Username</label>
+                    <input type="text" class="form-control" name="username" placeholder="username" formControlName="username">
+                    
                 </div>
                 <div class="form-group">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" ngModel required #password="ngModel">
-                    <span style="color: red;" *ngIf="(password.touched || formRef.submitted) && password.errors?.required">
-                        <b> Password is required</b>
-                     </span>
+                    <label  class="form-label">Password</label>
+                    <input type="password" class="form-control" name="password" placeholder="password" formControlName="password">
                 </div> 
                 <div>
                     <a class="nav-link" routerLink="resetpassword" routerLinkActive="active" (click)="reset()" style="color:teal"> 
@@ -35,7 +23,7 @@
                
             
                 <div class="col-12">
-                    <button type="submit" class="btn btn-warning mt-3"><h5 class="fas fa-sign-in-alt">Login</h5></button>
+                    <button type="submit" class="btn btn-warning mt-3" [disabled]="loginForm.invalid"><h5 class="fas fa-sign-in-alt">Login</h5></button>
                 </div>
                 <div>
                     <a class="nav-link" routerLink="register" routerLinkActive="active" (click)="register()" style="text-align: center;"> <h6>New to Website? Create an account</h6></a>
