--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Playfair+Display:wght@500&display=swap');
 nav{
    
-    font-family: 'Berkshire Swash', cursive;
+    font-family: 'Merriweather', serif;
+    font-family: 'Playfair Display', serif;
 }
 
 .active{
