--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,42 @@
+<nav class="navbar navbar-expand-md navbar-light bg-info fixed-top">
+  <a class="navbar-brand" href="#"><img src="assets/logo2.png" width="80px" alt="" style="border-radius: 50%;"></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav  m%-auto">
+      <li class="nav-item">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchTerm">
+          
+          <div class="input-group-append">
+            <button class="btn btn-light" >
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </div>
+      </li>
+      <li class="nav-item">
+        <h5>
+        <a class="nav-link"  routerLink="/home" routerLinkActive="active"><i class="fas fa-home p-2"></i>Home</a>
+        </h5>
+      </li>
+      <li class="nav-item">
+        <h5>
+        <a class="nav-link"  routerLink="/login" routerLinkActive="active"><i class="fas fa-sign-in-alt p-2"></i>Login</a>
+        </h5>
+      </li>
+      <li class="nav-item">
+        <h5>
+        <a class="nav-link" routerLink="/register" routerLinkActive="active"><i class="fas fa-align-left p-2"></i>Register</a>
+        </h5>
+      </li>
+     
+    </ul>
+    
+  </div>
 
+</nav>
 <div class="bg-light text-center" *ngIf="username!=null">
     <h3 class="d-1 pr-5"><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
     
@@ -8,7 +46,7 @@
   
   <div class="container mt-5">
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-       <div *ngFor="let p of products">
+       <div *ngFor="let p of products|search:searchTerm">
           <div class="col">
           <div class="card border-success mb-3" style="border-radius: 5%;">
             <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
@@ -20,7 +58,7 @@
            </div>
            <div class="card-footer bg-transparent border-success">
               <div>
-                <a  class="btn btn-warning" style="float: left;margin: 10px;"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+                <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="login()"><h5 class="fas fa-eye m-1"></h5>View Product</a>
               </div>
               <div>
                 <a  class="btn btn-info" style="float:right;margin: 10px;color: purple;">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
@@ -32,3 +70,105 @@
      </div>
   </div>
   
+
+  <div class="container-fluid  pt-5" style="background-color: black;">
+    <div class="row text-shadow" style="background-color: black;">
+        <section class="col-md-2">
+            <ul class="one">
+                <li>
+                    <h6>ABOUT</h6>
+                </li>
+                <li> <a class="two" href=""> Contact Us </a>  </li>
+                <li> <a class="two" href=""> About Us</a>  </li>
+                <li> <a class="two" href=""> Carriers</a> </li>
+                <li> <a class="two" href=""> Flipcart Stories</a> </li>
+                <li> <a class="two" href=""> Press</a> </li>
+
+            </ul>
+
+        </section>
+        <section class="col-md-2">
+            <ul class="one">
+                <li>
+                    <h6>HELP</h6>
+                </li>
+                <li><a class="two" href="">Payments</a> </li>
+                <li><a class="two" href="">Shipping</a> </li>
+                <li> <a class="two" href=""> Cancellation and Returns</a> </li>
+                <li> <a class="two" href="">FAQ</a> </li>
+                <li> <a class="two" href="">Report Infringement</a> </li>
+
+            </ul>
+        </section>
+        <section class="col-md-2">
+            <ul class="one">
+                <li>
+                    <h6>POLICY</h6>
+                </li>
+                <li><a class="two" href="">Return Polict</a> </li>
+                <li><a class="two" href="">Terms of use</a> </li>
+                <li> <a class="two" href=""> Security</a> </li>
+                <li> <a class="two" href="">Privacy</a> </li>
+                <li> <a class="two" href="">Sitemap</a> </li>
+                <li> <a class="two" href="">EPR Compliance</a> </li>
+
+            </ul>
+        </section>
+        <section class="col-md-1">
+            <ul class="one">
+                <li>
+                    <h6>SOCIAL</h6>
+                </li>
+                <li><a class="two" href="">Facebook</a> </li>
+                <li><a class="two" href="">Twitter</a> </li>
+                <li> <a class="two" href="">Youtube</a> </li>
+
+            </ul>
+        </section>
+        <section class="col-md-2">
+            <ul class="one">
+                <li>
+                    <h6>Mail Us :</h6>
+                </li>
+                <li>
+                    Flipkart Internet Private Limited,</li>
+<li>  Buildings Alyssa, Begonia &</li>
+                    
+
+                   <li>Clove Embassy Tech Village, </li> 
+
+                   <li>Outer Ring Road, Devarabeesanahalli Village, </li> 
+
+                   <li>  Bengaluru, 560103,</li>
+
+                   <li>Karnataka, India </li> 
+            </ul>
+        </section>
+        <section class="col-md-2">
+            <ul class="one">
+                <li>
+                    <h6> Registered Office Address:
+                    </h6>
+                </li>
+                <li>Flipkart Internet Private Limited,</li>
+
+                 <li>    Buildings Alyssa, Begonia & </li>
+                    
+                 <li>  Clove Embassy Tech Village, </li>
+                    
+                 <li>  Outer Ring Road, Devarabeesanahalli Village, </li>
+                    
+                 <li>  Bengaluru, 560103, </li>
+                    
+                 <li> Karnataka, India </li>
+                    
+                 <li>  CIN : U51109KA2012PTC066107 </li>
+                    
+                  <li> Telephone: 1800 208 9898 </li>
+
+            </ul>
+        </section>
+
+
+    </div>
+</div>
