--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,11 +10,15 @@
                 <div class="form-group">
                     <label class="form-label">Username</label>
                     <input type="text" class="form-control" name="username" placeholder="username" formControlName="username">
+                    <p *ngIf="loginForm.get('username').touched&&loginForm.get('username').errors?.required" style="color: red;">UserName is required</p>
                     
                 </div>
                 <div class="form-group">
                     <label  class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" placeholder="password" formControlName="password">
+                    <p *ngIf="loginForm.get('password').touched&&loginForm.get('password').errors?.required" style="color: red;">Password is required</p>
+       
+     
                 </div> 
                 <div>
                     <a class="nav-link" routerLink="resetpassword" routerLinkActive="active" (click)="reset()" style="color:teal"> 
