--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -7,3 +7,6 @@ h1{
     font-family: 'Merriweather', serif;
     font-family: 'Playfair Display', serif;
 }
+/*#form{
+    border: 2px solid teal;
+}*/
