--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -55,13 +55,12 @@
                
                
             </div>
-            
-        
-            <div class="form-group  col-12">
-                <label  class="form-label">Product Description</label>
-                <input type="text" class="form-control" name="description" placeholder="description of product" formControlName="description">
+            <div class="form-group">
+                <label>Product Description</label>
+                <textarea cols="100" rows="3"  class="form-control"  name="description" formControlName="description" placeholder="Enter product description" ></textarea>
+                    
             </div>
-    
+        
             <!-- photo -->
             <div class="form-group col-12 py-3">
                 <label>Upload Product Image</label>
