--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -18,16 +18,16 @@
            <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
           <div class="card-body">
             <h3 class="card-title text-center" style="color: chocolate">{{p.productname}}</h3>
-            <h5 class="card-text">Brand:{{p.brand}}</h5>
-            <h5 class="card-text">Product ID:{{p.productID}}</h5>
-            <h5 class="card-text">Colour:{{p.colour}}</h5>
-            <h5 class="card-text">Description:{{p.description}}</h5>
-            <h5 class="card-text">Category:{{p.category}}</h5>
-            <h5 class="card-text">Cost:{{(p.cost)| currency:"INR"}}</h5>
+            <h5 class="card-text">Brand:<b style="color: darkmagenta;">{{p.brand}}</b></h5>
+            <h5 class="card-text">Product ID:<b style="color: darkmagenta;">{{p.productID}}</b></h5>
+            <h5 class="card-text">Colour:<b style="color: darkmagenta;">{{p.colour}}</b></h5>
+            <h5 class="card-text">Description:<b style="color: darkmagenta;">{{p.description}}</b></h5>
+            <h5 class="card-text">Category:<b style="color: darkmagenta;">{{p.category}}</b></h5>
+            <h5 class="card-text">Cost:<b style="color: teal">{{(p.cost)| currency:"INR"}}</b></h5>
           </div>
           <div>
              <div>
-               <a  class="btn btn-info" style="float: left;margin: 10px;">Edit</a>
+               <a  class="btn btn-info" style="float: left;margin: 10px;" (click)="edit(p)"><h5 class="fas fa-edit"></h5>Edit</a>
              </div>
              <div>
                <a  class="btn btn-danger" style="float:right;margin: 10px;" (click)="delete(i)"><h5 class="fas fa-trash-alt"></h5>Delete</a>
