--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,6 +53,7 @@
            <div class="card-body">
              <h5 class="card-title text-center">{{p.productname}}</h5>
              <h5 class="card-text text-center">{{p.brand}}</h5>
+             <!-- <h5 class="card-text">Category:{{p.category}}</h5> -->
              <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
              
            </div>
@@ -80,8 +81,8 @@
                 </li>
                 <li> <a class="two" href=""> Contact Us </a>  </li>
                 <li> <a class="two" href=""> About Us</a>  </li>
-                <li> <a class="two" href=""> Carriers</a> </li>
-                <li> <a class="two" href=""> Flipcart Stories</a> </li>
+                <li> <a class="two" href=""> Careers</a> </li>
+                <li> <a class="two" href=""> Flipkart Stories</a> </li>
                 <li> <a class="two" href=""> Press</a> </li>
 
             </ul>
@@ -94,7 +95,7 @@
                 </li>
                 <li><a class="two" href="">Payments</a> </li>
                 <li><a class="two" href="">Shipping</a> </li>
-                <li> <a class="two" href=""> Cancellation and Returns</a> </li>
+                <li> <a class="two" href=""> Cancellation & Returns</a> </li>
                 <li> <a class="two" href="">FAQ</a> </li>
                 <li> <a class="two" href="">Report Infringement</a> </li>
 
@@ -105,8 +106,8 @@
                 <li>
                     <h6>POLICY</h6>
                 </li>
-                <li><a class="two" href="">Return Polict</a> </li>
-                <li><a class="two" href="">Terms of use</a> </li>
+                <li><a class="two" href="">Return Policy</a> </li>
+                <li><a class="two" href="">Terms Of Use</a> </li>
                 <li> <a class="two" href=""> Security</a> </li>
                 <li> <a class="two" href="">Privacy</a> </li>
                 <li> <a class="two" href="">Sitemap</a> </li>
@@ -171,4 +172,5 @@
 
 
     </div>
+    <hr style="color: wheat;">
 </div>
