--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,27 @@
 
-<div class="container-fluid"> 
-    <h2 style="color:darkmagenta;text-align: center;"><h1 class="fas fa-users m-2"></h1>Login</h2>
-    <div class="row mt-5" >
-        <div class="col-md-4 col-sm-2"></div>
-        <div class="col-md-4 col-sm-6">
+<!-- <div class="container-fluid" style="background-image: url('https://tdcte.files.wordpress.com/2019/03/seamless-polygon-backgrounds-vol-website.jpg');background-size: cover;height: 670px;">  -->
+    
+   <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 col-sm-2"></div>
+        <div class="card col-md-7 col-sm-6 mt-5">
+            <div class="row">
+            <div class="col-md-5 col-sm-3">
+               <img src="https://pbs.twimg.com/profile_images/1267713887165485061/WUR4QXtd.jpg" alt="" height="300px" width="300px">
+            </div>
+            <div class="col-md-5 col-sm-3">
+            <h2 style="color:darkmagenta;text-align: center;"><h1 class="fas fa-users m-2 mt-3"></h1>Login</h2>
             <form  [formGroup]="loginForm" class="row" (ngSubmit)="onSubmit()">
                
-              
+   
                 <div class="form-group">
-                    <label class="form-label">Username</label>
+                    <label class="form-label"><b>Username</b></label>
                     <input type="text" class="form-control" name="username" placeholder="username" formControlName="username">
                     <p *ngIf="loginForm.get('username').touched&&loginForm.get('username').errors?.required" style="color: red;">UserName is required</p>
                     
                 </div>
                 <div class="form-group">
-                    <label  class="form-label">Password</label>
+                    <label  class="form-label"><b>Password</b></label>
                     <input type="password" class="form-control" name="password" placeholder="password" formControlName="password">
                     <p *ngIf="loginForm.get('password').touched&&loginForm.get('password').errors?.required" style="color: red;">Password is required</p>
        
@@ -29,12 +36,14 @@
                 <div class="col-12">
                     <button type="submit" class="btn btn-warning mt-3" [disabled]="loginForm.invalid"><h5 class="fas fa-sign-in-alt">Login</h5></button>
                 </div>
+            
                 <div>
                     <a class="nav-link" routerLink="register" routerLinkActive="active" (click)="register()" style="text-align: center;"> <h6>New to Website? Create an account</h6></a>
                 </div>
             </form>
-            
+            </div>
+            </div>
         </div>
-        <div class="col-md-2 col-sm-2"></div>
+        <!-- <div class="col-md-3 col-sm-2"></div> -->
     </div>
      </div> 
