--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,59 +75,59 @@
   <div class="container-fluid  pt-5" style="background-color: black;">
     <div class="row text-shadow" style="background-color: black;">
         <section class="col-md-2">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6>ABOUT</h6>
                 </li>
-                <li> <a class="two" href=""> Contact Us </a>  </li>
-                <li> <a class="two" href=""> About Us</a>  </li>
-                <li> <a class="two" href=""> Careers</a> </li>
-                <li> <a class="two" href=""> Flipkart Stories</a> </li>
-                <li> <a class="two" href=""> Press</a> </li>
+                <li> <a class="element" href=""> Contact Us </a>  </li>
+                <li> <a class="element" href=""> About Us</a>  </li>
+                <li> <a class="element" href=""> Careers</a> </li>
+                <li> <a class="element" href=""> Flipkart Stories</a> </li>
+                <li> <a class="element" href=""> Press</a> </li>
 
             </ul>
 
         </section>
         <section class="col-md-2">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6>HELP</h6>
                 </li>
-                <li><a class="two" href="">Payments</a> </li>
-                <li><a class="two" href="">Shipping</a> </li>
-                <li> <a class="two" href=""> Cancellation & Returns</a> </li>
-                <li> <a class="two" href="">FAQ</a> </li>
-                <li> <a class="two" href="">Report Infringement</a> </li>
+                <li><a class="element" href="">Payments</a> </li>
+                <li><a class="element" href="">Shipping</a> </li>
+                <li> <a class="element" href=""> Cancellation & Returns</a> </li>
+                <li> <a class="element" href="">FAQ</a> </li>
+                <li> <a class="element" href="">Report Infringement</a> </li>
 
             </ul>
         </section>
         <section class="col-md-2">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6>POLICY</h6>
                 </li>
-                <li><a class="two" href="">Return Policy</a> </li>
-                <li><a class="two" href="">Terms Of Use</a> </li>
-                <li> <a class="two" href=""> Security</a> </li>
-                <li> <a class="two" href="">Privacy</a> </li>
-                <li> <a class="two" href="">Sitemap</a> </li>
-                <li> <a class="two" href="">EPR Compliance</a> </li>
+                <li><a class="element" href="">Return Policy</a> </li>
+                <li><a class="element" href="">Terms Of Use</a> </li>
+                <li> <a class="element" href=""> Security</a> </li>
+                <li> <a class="element" href="">Privacy</a> </li>
+                <li> <a class="element" href="">Sitemap</a> </li>
+                <li> <a class="element" href="">EPR Compliance</a> </li>
 
             </ul>
         </section>
         <section class="col-md-1">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6>SOCIAL</h6>
                 </li>
-                <li><a class="two" href="">Facebook</a> </li>
-                <li><a class="two" href="">Twitter</a> </li>
-                <li> <a class="two" href="">Youtube</a> </li>
+                <li><a class="element" href="">Facebook</a> </li>
+                <li><a class="element" href="">Twitter</a> </li>
+                <li> <a class="element" href="">Youtube</a> </li>
 
             </ul>
         </section>
         <section class="col-md-2">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6>Mail Us :</h6>
                 </li>
@@ -146,7 +146,7 @@
             </ul>
         </section>
         <section class="col-md-2">
-            <ul class="one">
+            <ul class="heading">
                 <li>
                     <h6> Registered Office Address:
                     </h6>
@@ -172,5 +172,5 @@
 
 
     </div>
-    <hr style="color: wheat;">
+    
 </div>
