--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,31 +38,74 @@
 
 </nav>
 <div class="bg-light text-center" *ngIf="username!=null">
-    <h3 class="d-1 pr-5"><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
+    <h3><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
+      
+        <a routerLink="" (click)="showUserCart()" >
+            <h4 class="fas fa-cart-arrow-down  text-danger text-center mt-3">
+                <sup class="text-danger float-end">
+                    {{userCartSize}}
+                </sup>
+            </h4>
+        </a>
+       
+    <button class=" btn btn-success px-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
+
     
-    <button class="btn btn-success  px-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
-   
-  </div>
+      
   
-  <div class="container mt-5">
+    
+  </div>
+
+  
+  <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        
+        <img src="https://fridgenovenrepairs.co.za/images/banner88.jpg" class="d-block w-100" alt="..." width="1100" height="500"> 
+      </div>
+      <div class="carousel-item">
+          <img src="https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-taobao-e-commerce-appliances-promotion-poster-banner-image_155307.jpg" class="d-block w-100" alt="..." width="1100" height="500">
+     
+      </div>
+      <div class="carousel-item">
+        <img src="https://nextlevelenergy.net/wp-content/uploads/2019/04/ENERGY-STAR.jpg" class="d-block w-100" alt="..." width="1100" height="500">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <div class="container mt-5" style="background-color: turquoise;border-radius: 2%;">
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
-       <div *ngFor="let p of products|search:searchTerm">
+       <div *ngFor="let p of products|search:searchTerm;let i=index">
           <div class="col">
-          <div class="card border-success mb-3" style="border-radius: 5%;">
+          <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
             <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
            <div class="card-body">
              <h5 class="card-title text-center">{{p.productname}}</h5>
              <h5 class="card-text text-center">{{p.brand}}</h5>
-             <!-- <h5 class="card-text">Category:{{p.category}}</h5> -->
+         
              <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
+             <h5 class="card-text text-center">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
              
            </div>
            <div class="card-footer bg-transparent border-success">
               <div>
-                <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="login()"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+                <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
               </div>
               <div>
-                <a  class="btn btn-info" style="float:right;margin: 10px;color: purple;">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
+                <a  class="btn btn-info" style="float:right;margin: 10px;color: purple;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
               </div>
            </div>
           </div>
@@ -72,105 +115,5 @@
   </div>
   
 
-  <div class="container-fluid  pt-5" style="background-color: black;">
-    <div class="row text-shadow" style="background-color: black;">
-        <section class="col-md-2">
-            <ul class="heading">
-                <li>
-                    <h6>ABOUT</h6>
-                </li>
-                <li> <a class="element" href=""> Contact Us </a>  </li>
-                <li> <a class="element" href=""> About Us</a>  </li>
-                <li> <a class="element" href=""> Careers</a> </li>
-                <li> <a class="element" href=""> Flipkart Stories</a> </li>
-                <li> <a class="element" href=""> Press</a> </li>
 
-            </ul>
-
-        </section>
-        <section class="col-md-2">
-            <ul class="heading">
-                <li>
-                    <h6>HELP</h6>
-                </li>
-                <li><a class="element" href="">Payments</a> </li>
-                <li><a class="element" href="">Shipping</a> </li>
-                <li> <a class="element" href=""> Cancellation & Returns</a> </li>
-                <li> <a class="element" href="">FAQ</a> </li>
-                <li> <a class="element" href="">Report Infringement</a> </li>
-
-            </ul>
-        </section>
-        <section class="col-md-2">
-            <ul class="heading">
-                <li>
-                    <h6>POLICY</h6>
-                </li>
-                <li><a class="element" href="">Return Policy</a> </li>
-                <li><a class="element" href="">Terms Of Use</a> </li>
-                <li> <a class="element" href=""> Security</a> </li>
-                <li> <a class="element" href="">Privacy</a> </li>
-                <li> <a class="element" href="">Sitemap</a> </li>
-                <li> <a class="element" href="">EPR Compliance</a> </li>
-
-            </ul>
-        </section>
-        <section class="col-md-1">
-            <ul class="heading">
-                <li>
-                    <h6>SOCIAL</h6>
-                </li>
-                <li><a class="element" href="">Facebook</a> </li>
-                <li><a class="element" href="">Twitter</a> </li>
-                <li> <a class="element" href="">Youtube</a> </li>
-
-            </ul>
-        </section>
-        <section class="col-md-2">
-            <ul class="heading">
-                <li>
-                    <h6>Mail Us :</h6>
-                </li>
-                <li>
-                    Flipkart Internet Private Limited,</li>
-<li>  Buildings Alyssa, Begonia &</li>
-                    
-
-                   <li>Clove Embassy Tech Village, </li> 
-
-                   <li>Outer Ring Road, Devarabeesanahalli Village, </li> 
-
-                   <li>  Bengaluru, 560103,</li>
-
-                   <li>Karnataka, India </li> 
-            </ul>
-        </section>
-        <section class="col-md-2">
-            <ul class="heading">
-                <li>
-                    <h6> Registered Office Address:
-                    </h6>
-                </li>
-                <li>Flipkart Internet Private Limited,</li>
-
-                 <li>    Buildings Alyssa, Begonia & </li>
-                    
-                 <li>  Clove Embassy Tech Village, </li>
-                    
-                 <li>  Outer Ring Road, Devarabeesanahalli Village, </li>
-                    
-                 <li>  Bengaluru, 560103, </li>
-                    
-                 <li> Karnataka, India </li>
-                    
-                 <li>  CIN : U51109KA2012PTC066107 </li>
-                    
-                  <li> Telephone: 1800 208 9898 </li>
-
-            </ul>
-        </section>
-
-
-    </div>
-    
-</div>
+<app-footer></app-footer>
