--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
 
-<!-- <div class="container-fluid" style="background-image: url('https://tdcte.files.wordpress.com/2019/03/seamless-polygon-backgrounds-vol-website.jpg');background-size: cover;height: 670px;">  -->
-    
+  <body style="background-image:url('/assets/login-page-bg.jpg');background-repeat: no-repeat;background-size: cover;height: 650px;">
+      
+  
    <div class="container-fluid">
     <div class="row">
         <div class="col-md-2 col-sm-2"></div>
@@ -14,15 +15,17 @@
             <form  [formGroup]="loginForm" class="row" (ngSubmit)="onSubmit()">
                
    
-                <div class="form-group">
-                    <label class="form-label"><b>Username</b></label>
-                    <input type="text" class="form-control" name="username" placeholder="username" formControlName="username">
+                <div class="form-floating mb-3">
+                    
+                    <input type="text" class="form-control" name="username"id="username" placeholder="username" formControlName="username">
+                    <label for="username" ><b>Username</b></label>
                     <p *ngIf="loginForm.get('username').touched&&loginForm.get('username').errors?.required" style="color: red;">UserName is required</p>
                     
                 </div>
-                <div class="form-group">
-                    <label  class="form-label"><b>Password</b></label>
-                    <input type="password" class="form-control" name="password" placeholder="password" formControlName="password">
+                <div class="form-floating">
+                   
+                    <input type="password" class="form-control" id="password" name="password" placeholder="password" formControlName="password">
+                    <label  for="password"><b>Password</b></label>
                     <p *ngIf="loginForm.get('password').touched&&loginForm.get('password').errors?.required" style="color: red;">Password is required</p>
        
      
@@ -35,6 +38,7 @@
             
                 <div class="col-12">
                     <button type="submit" class="btn btn-warning mt-3" [disabled]="loginForm.invalid"><h5 class="fas fa-sign-in-alt">Login</h5></button>
+                  
                 </div>
             
                 <div>
@@ -47,3 +51,4 @@
         <!-- <div class="col-md-3 col-sm-2"></div> -->
     </div>
      </div> 
+</body>
