--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 
-<h1 class="text-center  py-3" style="color:#05386B;"><b>SIGN UP</b></h1>
+<h1 class="text-center  py-3" style="color:rgb(17, 17, 224)"><b>SIGN UP</b></h1>
 <div class="container">
     <div class="row">
         <div class="col-md-4">
