--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,10 +2,10 @@
 <body style="background-image: url('https://i.pinimg.com/originals/0c/64/b8/0c64b866e848e0cacb94466619d02583.jpg');background-repeat: no-repeat;background-size: cover;width: 100%;" >
     <div class="text-right bg-light px-5" style="height: 100px;">
         <h3 class="text-center d-1 pr-5"><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
-        <a routerLink="/admincomp" style="color: rebeccapurple;text-decoration: none;" routerLinkActive="active"><b>Add Products </b></a>
-         <a routerLink="/allproducts" style="color: darkmagenta;text-decoration: none;padding-left: 20px;" routerLinkActive="active"><b>Show Products</b> </a> 
+        <!-- <a routerLink="/admincomp" style="color: darkmagenta;text-decoration:none;margin-right: auto;"  routerLinkActive="active"><b>Add Products </b></a> -->
+         <a routerLink="/allproducts" style="color: darkmagenta;text-decoration: none;padding-left: 10px;" routerLinkActive="active"><b>All Products</b> </a> 
        
-        <button class="btn btn-success float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
+        <button class="btn btn-success float-end ml-3" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
        
     </div>
     <div class="container-fluid col-md-7">
@@ -79,5 +79,6 @@
     </div>
     
     </body>
+
     
     
