--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-info">
+<nav class="navbar navbar-expand-md navbar-light" style="background-color: #3BB9FF;">
   
   <a class="navbar-brand" href="#"><img src="assets/logo2.png" width="80px" alt="" style="border-radius: 50%;"></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
