--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -47,9 +47,9 @@
                 <li>
                     <h6>SOCIAL</h6>
                 </li>
-                <li><a class="element" href="">Facebook</a> </li>
-                <li><a class="element" href="">Twitter</a> </li>
-                <li> <a class="element" href="">Youtube</a> </li>
+                <li><a class="element" href="https://www.facebook.com/flipkart">Facebook</a> </li>
+                <li><a class="element" href="https://www.twitter.com/flipkart">Twitter</a> </li>
+                <li> <a class="element" href="https://www.youtube.com/flipkart">Youtube</a> </li>
 
             </ul>
         </section>
@@ -90,7 +90,7 @@
                     
                  <li> Karnataka, India </li>
                     
-                 <li>  CIN : U51109KA2012PTC066107 </li>
+                 <li>  CIN :U51109KA2012PTC066107 </li>
                     
                   <li> Telephone: 1800 208 9898 </li>
 
