--- a/src/app/usercart/usercart.component.html
+++ b/src/app/usercart/usercart.component.html
@@ -20,7 +20,22 @@
                <p class="card-title">Brand: {{p.brand}}</p>   
               <p class="card-title">Cost : {{(p.cost)| currency:"INR"}}</p> 
               <p class="card-title">Product Description : {{p.description}}</p> 
-            
+              <!-- <div class="col-5"> 
+                     
+                <ul class="pagination justify-content-end set_quantity ">
+                  <li class="page-item">
+                    <button class="page-link" href="#" (click)="incr(p)"><i class="fa fa-plus" aria-hidden="true"></i>  </button>
+                  </li>  
+             
+             <span class="text-center p-1"></span>
+                  <li class="page-item">
+                    <button class="page-link" href="#" (click)="decr(p)"><i class="fa fa-minus" aria-hidden="true"></i>
+                    </button>
+                  </li>            
+                </ul>
+                
+             
+            </div>-->
               <p class="card-title"><button class="btn btn-danger" (click)="delete(i)"><h5 class="fas fa-times-circle"></h5>delete</button></p>
             </div>
           </div>
@@ -29,3 +44,6 @@
 
  
 </div>
+<!-- <div class="container-fluid p-3 " *ngIf="cart.length!==0"> 
+  <h5 class="text-center amount ">TotalAmount:<strong>{{amount | currency:"INR"}}</strong></h5>
+</div>-->
