--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -3,16 +3,16 @@
    
  
   <div class="bg-light px-5 text-right" style="height: 80px;">
-        <a routerLink="/admincomp" style="color: rebeccapurple;text-decoration: none;" routerLinkActive="active"><b>Add Products </b></a>
-       
-        <button class="btn btn-warning  px-4 my-4 float-end" (click)="back()"><h6 class="fas fa-backward m-1"></h6><b>Back</b></button>
+        <!-- <a routerLink="/admincomp" style="color: rebeccapurple;text-decoration: none;margin-top: 30px;" routerLinkActive="active"><b>Add Product </b></a> -->
         <button class="btn btn-success  px-4 my-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
        
+        <button class="btn btn-warning  px-4 my-4 float-end m-1" (click)="back()"><h5 class="fas fa-plus-circle"></h5><b>Add New Product</b></button>
+        
      
     </div>
 
     <h1 style="text-align: center;">All Products({{count}})</h1>
-   <div class="container mt-5">
+   <div class="container mt-5 col-md-12">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
       <div *ngFor="let p of products,let i=index">
          <div class="col">
