--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -6,7 +6,7 @@
         <!-- <a routerLink="/admincomp" style="color: rebeccapurple;text-decoration: none;margin-top: 30px;" routerLinkActive="active"><b>Add Product </b></a> -->
         <button class="btn btn-success  px-4 my-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
        
-        <button class="btn btn-warning  px-4 my-4 float-end m-1" (click)="back()"><h5 class="fas fa-plus-circle"></h5><b>Add New Product</b></button>
+        <button class="btn btn-warning  px-4 my-4 float-start m-1" (click)="back()"><h5 class="fas fa-plus-circle"></h5><b>Add New Product</b></button>
         
      
     </div>
