--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -48,7 +48,13 @@
                
                 
             </div>
-    
+            <div class="form-group col-md-5">
+                <label>Quantity</label>
+                <input type="number" class="form-control" name="quantity" formControlName="quantity" placeholder="Enter quantity" >
+                <!-- <p class="text text-danger" *ngIf="getcontrol().pquantity.errors?.required && getcontrol().pquantity.touched">Quantity is required</p> -->
+                
+                
+            </div>
           
             <div class="form-group col-md-4">
                 <label class="form-label"><b>Cost</b></label>
