--- a/src/app/admin/editproduct/editproduct.component.html
+++ b/src/app/admin/editproduct/editproduct.component.html
@@ -42,7 +42,11 @@
                    
                     
                 </div>
-        
+                <!-- <div class="form-group col-md-4"> 
+                    <label>Quantity</label>
+                    <input type="number" class="form-control" name="quantity" formControlName="quantity" placeholder="Enter quantity" >
+                    
+                </div>-->
               
                 <div class="form-group col-md-4">
                     <label class="form-label">Cost</label>
