--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -26,6 +26,7 @@
            <h5>Rating: <ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
             <h5 class="card-text">Description:<b style="color: darkmagenta;">{{p.description}}</b></h5>
             <h5 class="card-text">Category:<b style="color: darkmagenta;">{{p.category}}</b></h5>
+            <!-- <h5 class="card-text">Quantity:<b style="color: darkmagenta;">{{p.quantity}}</b></h5> -->
             <h5 class="card-text">Cost:<b style="color: teal">{{(p.cost)| currency:"INR"}}</b></h5>
           </div>
           <div>
