--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,10 +50,6 @@
        
     <button class=" btn btn-success px-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
 
-    
-      
-  
-    
   </div>
 
   
@@ -85,35 +81,92 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <div class="container-fluid my-5">
+    <div class="row">
+        <div class="col-sm-2 col-md-2 bg-dark mb-2" style="border-radius: 3%;">
+            <nav class="nav my-3">
+              <ul style="list-style-type: none;">
+                <li class="nav-item">
+                    <strong class="text-white nav-link" style="font-size: 20px;">Categories</strong>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(0)" class="nav-link">AC<br></a>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(1)" class="nav-link">TV</a>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(2)" class="nav-link">washing machine</a>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(3)" class="nav-link">shoes<br></a>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(4)" class="nav-link">watch</a>
+                </li>
+                <li class="nav-item">
+                    <a  (click)="goto(5)" class="nav-link">refrigerator</a>
+                </li>
+              </ul>  
+            </nav>   
+        </div>
+    
 
-  <div class="container mt-5 col-md-10" style="background-color: turquoise;border-radius: 2%;">
-     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4">
-       <div *ngFor="let p of products|search:searchTerm;let i=index">
-          <div class="col">
-          <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
-            <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
-           <div class="card-body">
-             <h5 class="card-title text-center">{{p.productname}}</h5>
-             <h5 class="card-text text-center">{{p.brand}}</h5>
-         
-             <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
-             <h5 class="card-text text-center">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
-             
-           </div>
-           <div class="card-footer bg-transparent border-success">
-              <div>
-                <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 2%;">
+     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="!cat">
+       <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
+            <div class="col">
+              <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
+                <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">{{p.productname}}</h5>
+                    <h5 class="card-text text-center">{{p.brand}}</h5>
+                
+                    <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
+                    <h5 class="card-text text-center">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
+                    
+                  </div>
+                  <div class="card-footer bg-transparent border-success">
+                        <div>
+                          <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+                        </div>
+                        <div>
+                          <a   class="btn btn-info" style="float:right;margin: 10px;color: darkmagenta;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
+                        </div>
+                  </div>
               </div>
-              <div>
-                <a   class="btn btn-success" style="float:right;margin: 10px;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
-              </div>
-           </div>
-          </div>
-          </div>
+            </div>
        </div>
      </div>
+
+     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="cat">
+      <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
+           <div class="col">
+             <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
+               <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
+                 <div class="card-body">
+                   <h5 class="card-title text-center">{{p.productname}}</h5>
+                   <h5 class="card-text text-center">{{p.brand}}</h5>
+               
+                   <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
+                   <h5 class="card-text text-center">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
+                   
+                 </div>
+                 <div class="card-footer bg-transparent border-success">
+                       <div>
+                         <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+                       </div>
+                       <div>
+                         <a   class="btn btn-info" style="float:right;margin: 10px;color: darkmagenta;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
+                       </div>
+                 </div>
+             </div>
+           </div>
+      </div>
+    </div>
   </div>
-  
+  </div>
+  </div>
 
 
 <app-footer></app-footer>
