--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,13 +40,21 @@
 <div class="bg-light text-center" *ngIf="username!=null">
     <h3><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
       
-        <a routerLink="" (click)="showUserCart()" >
+        <a routerLink="" (click)="showUserCart()">
             <h4 class="fas fa-cart-arrow-down  text-danger text-center mt-3">
                 <sup class="text-danger float-end">
                     {{userCartSize}}
                 </sup>
             </h4>
         </a>
+        <a routerLink="" (click)="showorders()" class="m-5">My Orders<h4 class="fas fa-list-alt text-info text-center mt-3">
+          <sup class="text-info float-end">
+            {{userOrderSize}}
+        </sup>
+        </h4>
+         
+      </a>
+      <a routerLink="" (click)="showwishlist()" class="m-5">WishList</a>
        
     <button class=" btn btn-success px-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
 
@@ -61,15 +69,16 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        
-        <img src="https://fridgenovenrepairs.co.za/images/banner88.jpg" class="d-block w-100" alt="..." width="1100" height="500"> 
-      </div>
-      <div class="carousel-item">
-          <img src="https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-taobao-e-commerce-appliances-promotion-poster-banner-image_155307.jpg" class="d-block w-100" alt="..." width="1100" height="500">
+        <img src="https://images.yourstory.com/cs/2/9456dfb02d6c11e9aa979329348d4c3e/Imageu5sb-1612502958709.jpg" class="d-block w-100" alt="..." width="1100" height="280">
      
+         </div>
+      <div class="carousel-item">
+           <img src="https://fridgenovenrepairs.co.za/images/banner88.jpg" class="d-block w-100" alt="..." width="1100" height="280"> 
+     
+         
       </div>
       <div class="carousel-item">
-        <img src="https://nextlevelenergy.net/wp-content/uploads/2019/04/ENERGY-STAR.jpg" class="d-block w-100" alt="..." width="1100" height="500">
+        <img src="https://nextlevelenergy.net/wp-content/uploads/2019/04/ENERGY-STAR.jpg" class="d-block w-100" alt="..." width="1100" height="280">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -83,40 +92,47 @@
   </div>
   <div class="container-fluid my-5">
     <div class="row">
-        <div class="col-sm-2 col-md-2 bg-dark mb-2" style="border-radius: 3%;">
+        <div class="col-sm-2 col-md-2 bg-dark mb-2 " style="border-radius: 2%;">
             <nav class="nav my-3">
               <ul style="list-style-type: none;">
                 <li class="nav-item">
-                    <strong class="text-white nav-link" style="font-size: 20px;">Categories</strong>
+                    <strong class="text-white nav-link" style="font-size: 20px;">Appliances</strong>
                 </li>
                 <li class="nav-item">
-                    <a  (click)="goto(0)" class="nav-link">AC<br></a>
+                    <a  (click)="goto(0)" class="nav-link">Air Conditioners</a>
                 </li>
                 <li class="nav-item">
-                    <a  (click)="goto(1)" class="nav-link">TV</a>
+                    <a  (click)="goto(1)" class="nav-link">Televisions</a>
                 </li>
                 <li class="nav-item">
-                    <a  (click)="goto(2)" class="nav-link">washing machine</a>
+                    <a  (click)="goto(2)" class="nav-link">Washing Machines</a>
                 </li>
                 <li class="nav-item">
-                    <a  (click)="goto(3)" class="nav-link">shoes<br></a>
+                  <a  (click)="goto(5)" class="nav-link">Refrigerators</a>
+              </li>
+                <li class="nav-item">
+                  <strong class="text-white nav-link" style="font-size: 20px;">Fashion</strong>
+              </li>
+                <li class="nav-item">
+                    <a  (click)="goto(3)" class="nav-link">Men Footwear<br></a>
                 </li>
                 <li class="nav-item">
-                    <a  (click)="goto(4)" class="nav-link">watch</a>
-                </li>
+                  <a  (click)="goto(7)" class="nav-link">Women Footwear<br></a>
+              </li>
                 <li class="nav-item">
-                    <a  (click)="goto(5)" class="nav-link">refrigerator</a>
+                    <a  (click)="goto(4)" class="nav-link">Watches</a>
                 </li>
+               
               </ul>  
             </nav>   
         </div>
     
 
-  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 2%;">
+  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 1%;">
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="!cat">
        <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
             <div class="col">
-              <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
+              <div class="card border-success mb-3 mt-3" style="border-radius: 5%;height: 35rem;">
                 <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
                   <div class="card-body">
                     <h5 class="card-title text-center">{{p.productname}}</h5>
@@ -128,7 +144,9 @@
                   </div>
                   <div class="card-footer bg-transparent border-success">
                         <div>
-                          <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
+                          <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View</a>
+                          <a class="btn btn-primary " style="float: right;margin: 10px;" (click)="wishlist(i)"><h5 class="fas fa-heart"></h5>Wish</a>
+           
                         </div>
                         <div>
                           <a   class="btn btn-info" style="float:right;margin: 10px;color: darkmagenta;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
@@ -142,7 +160,7 @@
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="cat">
       <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
            <div class="col">
-             <div class="card border-success mb-3 mt-3" style="border-radius: 5%;">
+             <div class="card border-success mb-3 mt-3" style="border-radius: 5%;height: 35rem;">
                <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
                  <div class="card-body">
                    <h5 class="card-title text-center">{{p.productname}}</h5>
