--- a/src/app/viewproduct/viewproduct.component.html
+++ b/src/app/viewproduct/viewproduct.component.html
@@ -19,6 +19,8 @@
            
            
            <div class="mt-5"> <button class="btn btn-success float-end m-3" (click)="additem()"><h5 class="fas fa-cart-arrow-down m-1"></h5>Add to Cart</button>
+            <div class="mt-5"> <button class="btn btn-success float-end m-3" (click)="wishlist()"><h5 class="fas fa-heart"></h5>Add to Wishlist</button>
+         
             <button class="btn btn-warning float-end m-3" (click)="back()" style="margin-left: 20px;"><h5 class="fas fa-backward"></h5>Back</button>
             </div>
         </div>
