--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -4,21 +4,16 @@ div{
     font-family: 'Merriweather', serif;
     font-family: 'Playfair Display', serif;
 }
-h3{
+h1,h2{
     font-family: 'Merriweather', serif;
     font-family: 'Playfair Display', serif;
 }
-nav{
+p{
     font-family: 'Merriweather', serif;
     font-family: 'Playfair Display', serif;
 }
-.active{
-    font-weight: bold;
-}
+
 ngb-rating {
     color: #FFC107;
     font-size: 25px;
-}
-li{
-    font-size: large;
 }
